--- a/day3-203.移除列表元素_707.设计链表_206.反转列表.md
+++ b/day3-203.移除列表元素_707.设计链表_206.反转列表.md
@@ -83,31 +83,103 @@ linkedList.get(1);            //返回3
 ```c++
 class MyLinkedList {
 public:
+    // 定义链表节点结构体
+    struct LinkedNode{
+        int val;
+        LinkedNode* next;
+        LinkedNode(int x) : val(x), next(nullptr){}
+    };
 
+    // 初始化链表
     MyLinkedList() {
-
+        // 这里定义的头结点 是一个虚拟头结点，而不是真正的链表头结点
+        _dummyHead = new LinkedNode(0);
+        _size = 0;
     }
     
+    // 获取到第index个节点数值，如果index是非法数值直接返回-1， 注意index是从0开始的，第0个节点就是头结点
     int get(int index) {
-
-
+        // 非法判断
+        if (index < 0 || index > (_size - 1)){
+            return -1;
+        }
+        // 定义一个临时指针遍历链表，指针指向head
+        LinkedNode* cur = _dummyHead->next;
+        while (index--){
+            cur = cur->next;
+        }
+        return cur->val;
     }
     
+    // 在链表最前面插入一个节点，插入完成后，新插入的节点为链表的新的头结点
     void addAtHead(int val) {
-
+        // 定义新节点
+        LinkedNode* newNode = new LinkedNode(val);
+        // 在虚拟头节点和头节点之间插入一个新节点，先右后左
+        // 注意顺序，新节点指向头节点（虚拟头节点的下一个头节点）
+        newNode->next = _dummyHead->next;
+        _dummyHead->next = newNode;
+        _size++;
     }
     
+    // 在链表最后面添加一个节点
     void addAtTail(int val) {
-
+        LinkedNode* newNode = new LinkedNode(val);
+        LinkedNode* cur = _dummyHead;
+        // 找到末节点（指针指向nullptr的节点），将它指向新节点
+        while (cur->next != nullptr){
+            cur = cur->next;
+        }
+        cur->next = newNode;
+        _size++;
     }
     
+    // 在第index个节点之前插入一个新节点，例如index为0，那么新插入的节点为链表的新头节点。
+    // 如果index 等于链表的长度，则说明是新插入的节点为链表的尾结点
+    // 如果index大于链表的长度，则返回空
+    // 如果index小于0，则在头部插入节点
     void addAtIndex(int index, int val) {
+        // 非法判断
+        if (index > _size) return;
+        if (index < 0) index = 0;
 
+        LinkedNode* newNode = new LinkedNode(val);
+        LinkedNode* cur = _dummyHead;
+        while (index--){
+            cur = cur->next;
+        }
+        newNode->next = cur->next;
+        cur->next = newNode;
+        _size++;
     }
     
+    // 删除第index个节点，如果index 大于等于链表的长度，直接return，注意index是从0开始的
     void deleteAtIndex(int index) {
+        if (index < 0 || index >= _size)
+            return;
 
+        LinkedNode* cur = _dummyHead;
+        while (index--){
+            cur = cur->next;
+        }
+        // 链表删除即指针指向下一个节点
+        cur->next = cur->next->next;
+        _size--;
     }
+
+    // 打印链表
+    void printLinkedList() {
+        LinkedNode* cur = _dummyHead;
+        while (cur->next != nullptr) {
+            cout << cur->next->val << " ";
+            cur = cur->next;
+        }
+        cout << endl;
+    }
+
+private:
+    int _size;
+    LinkedNode* _dummyHead;
 };
 ```
 
@@ -154,7 +226,24 @@ public:
 class Solution {
 public:
     ListNode* reverseList(ListNode* head) {
-
+        // step1. 定义3个指针
+        // tmp指针保存cur的下一个节点
+        ListNode* tmp;
+        // cur指针指向头节点
+        ListNode* cur = head;
+        // pre指针初始化为NULL
+        ListNode* pre = nullptr;
+        // 遍历整个链表
+        while (cur){
+            // 用tmp指针保寸cur->next节点
+            tmp = cur->next;
+            // 反转指针
+            cur->next = pre;
+            // 更新pre和cur指针
+            pre = cur;
+            cur = tmp;
+        }
+        return pre;
     }
 };
 ```
